[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/sprites/01/pod.png" type="Texture" id=1]
[ext_resource path="res://assets/images/sprites/01/explosion2.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/game_objects/obstacles/scripts/Spike.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.73148
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Tip:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 7, 6 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.99426
height = 0.0

[node name="Spike" type="Area2D" groups=[
"lethal",
]]
pause_mode = 1
position = Vector2( 0, -3.60627 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.53376 )
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="Tip" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 15
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -9.53674e-07, 3.60627 )
scale = Vector2( 6.4, 6.4 )
process_parent = true
physics_process_parent = true
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
